@@ -1,3 +1,8 @@
+2012-06-10  Norbert Preining  <preining@logic.at>
+
+	* updmap.pl: fix ordering of how updmap.cfg files are read
+	and add documentation.
+
 2012-06-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am (EXTRA_DIST): Add the new file updmap.help2man.
